@@ -23,6 +23,7 @@
  * Class definition and methods for the main Content class.
  *
  * @package CMS
+ * @subpackage content_types
  * @license GPL
  */
 
@@ -32,6 +33,7 @@
  * This is the primary content type. This represents an HTML page generated by smarty.
  *
  * @package CMS
+ * @subpackage content_types
  * @license GPL
  */
 class Content extends ContentBase
